<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="default_notification_channel_id">Base</string>
    <string name="default_notification_channel_name">iCheck</string>
    <string name="default_notification_channel_desc">Notification channel of iCheck</string>
    <string name="qr_code_call_phone_format">TEL:%s</string>
    <string name="qr_code_send_sms_format">SMSTO:%s:%s</string>
    <string name="qr_code_send_emal_format">MAILTO:%s?subject=%s&amp;body=%s</string>
    <string name="qr_code_event_format">BEGIN:VEVENT\nSUMMARY:%s\nLOCATION:%s\nURL:%s\nDTSTART:%s\nDTEND:%s\nEND:VEVENT</string>
    <string name="qr_code_wifi_format">WIFI:S:%s;P:%s;T:%s;</string>
    <string name="qr_code_location_format">GEO:%s,%s</string>
    <string name="stamp_v3_format">http://public.icheck.vn/scan-evs?code=%s&amp;device=%s</string>
    <string name="xxx_fileprovider">%s.fileprovider</string>
    <string name="dong_y">Đồng ý</string>
    <string name="huy_bo">Hủy bỏ</string>
    <string name="ok">OK</string>
    <string name="goi_y_theo_doi">Gợi ý theo dõi</string>
    <string name="chua_co_nguoi_theo_doi">Chưa có người theo dõi</string>
    <string name="chua_dien_ra">Chưa diễn ra</string>
    <string name="khong_co_ket_noi_mang_vui_long_kiem_tra_va_thu_lai">Kết nối mạng của bạn có vấn đề. Vui lòng thử lại.</string>
    <string name="khong_co_ket_noi_mang_vui_long_thu_lai_sau">Không có kết nối mạng. Vui lòng thử lại sau</string>
    <string name="de_hien_thi_du_lieu_vui_long_bat_gps">Để hiển thị dữ liệu Cửa hàng, vui lòng bật GPS</string>
    <string name="so_dien_thoai_khong_duoc_de_trong">Số điện thoại không được để trống</string>
    <string name="tinh_thanh_khong_duoc_de_trong">Tỉnh thành không được để trống</string>
    <string name="quan_huyen_khong_duoc_de_trong">Quận/Huyện không được để trống</string>
    <string name="so_dien_thoai_co_chua_ky_tu_dac_biet">Số điện thoại có chứa ký tự đăc biệt</string>
    <string name="so_dien_thoai_khong_dung_dinh_dang">Số điện thoại không đúng định dạng</string>
    <string name="khong_the_thuc_hien_tac_vu_vi_ban_chua_cap_quyen">Không thể thực hiện tác vụ vì bạn chưa cấp đủ quyền</string>
    <string name="mat_khau_khong_hop_le">Mật khẩu không hợp lệ</string>
    <string name="mat_khau_toi_thieu_la_6_ky_tu">Mật khẩu tối thiểu là 6 ký tự</string>
    <string name="mat_khau_toi_thieu_la_8_ky_tu">Mật khẩu tối thiểu là 8 ký tự</string>
    <string name="quen_mat_khau">Quên mật khẩu</string>
    <string name="ban_gap_van_de_voi_dang_nhap">Bạn gặp vấn đề về đăng nhập?</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="so_dien_thoai_kich_hoat">Số điện thoại kích hoạt</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="tra_loi_xxx"><![CDATA[Trả lời  <b><font color="#3c5a99">%s</font></b>]]></string>
    <string name="binh_luan_xxx"><![CDATA[Bình luận  <b><font color="#3c5a99">%s</font></b>]]></string>
    <string name="hien_tai_dang_khong_co_su_kien_nao">Hiện tại đang không có sự kiện nào</string>
    <string name="thuong_xuyen_tham_gia_su_kien">Thường xuyên theo dõi các sự kiện hấp dẫn trên iCheck để tham gia và nhận quà nhé!</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="dang_nhap_ngay">Đăng nhập ngay</string>
    <string name="hoac_dang_nhap_bang">Hoặc đăng nhập bằng</string>
    <string name="facebook">Facebook</string>
    <string name="co_loi_xay_ra_vui_long_thu_lai">Có lỗi xảy ra. Vui lòng thử lại.</string>
    <string name="co_loi_xay_ra_vui_long_thu_lai_sau">Có lỗi xảy ra vui lòng thử lại sau</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="ho">Họ</string>
    <string name="ten">Tên</string>
    <string name="ma_xac_thuc">Mã xác thực</string>
    <string name="gui_lai_ma">Gửi lại mã</string>
    <string name="otp_content_xxx">iCheck đã gửi mã xác nhận đăng ký tài khoản đến số %s Vui lòng nhập mã xác nhận để hoàn thành đăng ký tài khoản iCheck.</string>
    <string name="otp_content_start">iCheck đã gửi mã xác nhận đăng ký tài khoản đến số</string>
    <string name="otp_content_end">Vui lòng nhập mã xác nhận để hoàn thành đăng ký tài khoản iCheck.</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="dang_ky_thanh_cong_upper_case">ĐĂNG KÝ THÀNH CÔNG</string>
    <string name="nhap_ma_xac_nhan">Nhập mã xác nhận</string>
    <string name="thong_tin_nguoi_dung">Thông tin người dùng</string>
    <string name="bo_qua">Bỏ qua</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="year_nam">Năm</string>
    <string name="da_ban_x">Đã bán %d</string>
    <string name="email">Email</string>
    <string name="ngay_sinh">Ngày sinh</string>
    <string name="quan_huyen">Quận/Huyện</string>
    <string name="quan_huyen_bat_buoc">Quận huyện (*)</string>
    <string name="ho_khong_duoc_de_trong">Họ không được để trống</string>
    <string name="ten_khong_duoc_de_trong">Tên không được để trống</string>
    <string name="ten_khong_hop_le">Tên không hợp lệ</string>
    <string name="mat_khau_khong_duoc_de_trong">Mật khẩu không được để trống</string>
    <string name="xac_nhan_mat_khau_khong_duoc_de_trong">Xác nhận mật khẩu không được để trống</string>
    <string name="xac_nhan_mat_khau_khong_khop">Xác nhận mật khẩu không khớp</string>
    <string name="nhap_so_dien_thoai">Nhập số điện thoại</string>
    <string name="tao_mat_khau">Tạo mật khẩu</string>
    <string name="tao_mat_khau_moi">Tạo mật khẩu mới</string>
    <string name="doi_mat_khau_thanh_cong">Đổi mật khẩu thành công</string>
    <string name="ban_da_xoa_bai_viet_thanh_cong">Bạn đã xóa bài viết thành công</string>
    <string name="xem_tat_ca">Xem tất cả</string>
    <string name="xem_them">Xem thêm</string>
    <string name="tin_tuc">Tin tức</string>
    <string name="khong_lay_duoc_du_lieu_vui_long_thu_lai">Không lấy được dữ liệu. Vui lòng thử lại.</string>
    <string name="cau_xxx">Câu %s</string>
    <string name="cau_hoi_xxx">Câu hỏi %s</string>
    <string name="x_nguoi_dang_theo_doi">%s người đang theo dõi</string>
    <string name="gui">Gửi</string>
    <string name="vui_long_chon_cau_tra_loi">Vui lòng chọn câu trả lời</string>
    <string name="vui_long_tra_loi_het_cac_cau_hoi">Vui lòng trả lời hết các câu hỏi</string>
    <string name="text_direct_survey_success">Hãy tích cực trả lời các câu hỏi để nhận thêm nhiều phần quà hấp dẫn nhé!</string>
    <string name="khao_sat_nhan_qua_title">Khảo Sát Nhận Quà</string>
    <string name="khao_sat">Khảo sát</string>
    <string name="text_banner_survey_tip">Mẹo nhỏ: Hãy tích cực trả lời các câu hỏi để nhận thêm nhiều phần quà hấp dẫn nhé!</string>
    <string name="trang_chu_title">Trang Chủ</string>
    <string name="tiep_theo_title">Tiếp Theo</string>
    <string name="qua_cua_toi">Quà của tôi</string>
    <string name="mua_ma_the_dien_thoai">Mua mã thẻ điện thoại</string>
    <string name="bo_qua_khao_sat">Bỏ qua khảo sát</string>
    <string name="ban_chac_chan_bo_qua_khao_sat_nay_chu">Bạn chắc chắn bỏ qua khảo sát này chứ?</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="lich_su">Lịch sử</string>
    <string name="tin_nhan">Tin nhắn</string>
    <string name="danh_muc">Danh mục</string>
    <string name="doanh_nghiep_noi_bat">Doanh nghiệp nổi bật</string>
    <string name="don_hang">Đơn hàng</string>
    <string name="cho_xac_nhan">Chờ xác nhận</string>
    <string name="cho_xac_thuc">Chờ xác thực</string>
    <string name="lich_su_nap_the_va_dich_vu"><![CDATA[Lịch sử mua và nạp thẻ]]></string>
    <string name="ma_qr_chia_se_thong_tin_cua_ban">Mã QR - Chia sẻ thông tin của bạn</string>
    <string name="duong_dan">Đường dẫn</string>
    <string name="van_ban">Văn bản</string>
    <string name="tao_ma_qr">Tạo Mã QR</string>
    <string name="tao_qrcode">Tạo QRcode</string>
    <string name="noi_dung_ma_qr">Nội dung mã QR</string>
    <string name="chia_se_van_ban">Chia sẻ văn bản</string>
    <string name="chia_se">Chia sẻ</string>
    <string name="goi_y_page">Gợi ý cho bạn những Page liên quan đến chủ đề bạn đã chọn trước đó!</string>
    <string name="chia_se_duong_link">Chia sẻ đường link</string>
    <string name="chia_se_so_dien_thoai">Chia sẻ số điện thoại</string>
    <string name="vi_tri">Vị trí</string>
    <string name="danh_ba">Danh bạ</string>
    <string name="lich_su_kien">Lịch sự kiện</string>
    <string name="wifi">Wifi</string>
    <string name="chia_se_tin_nhan">Chia sẻ tin nhắn</string>
    <string name="chia_se_thong_tin_cua_ban">Chia sẻ thông tin của bạn</string>
    <string name="chia_se_email">Chia sẻ email</string>
    <string name="email_khong_dung_dinh_dang">Email không đúng định dạng</string>
    <string name="chia_se_qr_code_nay_toi_ban_be_cua_ban">Chia sẻ mã QR này tới bạn bè của bạn</string>
    <string name="tao_moi">Tạo mới</string>
    <string name="tai_xuong">Tải xuống</string>
    <string name="chia_se_wifi">Chia Sẻ Wifi</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="chia_se_su_kien">Chia sẻ sự kiện</string>
    <string name="thoi_gian_bat_dau_khong_the_nho_hon_thoi_gian_hien_tai">Thời gian bắt đầu không thể nhỏ hơn thời gian hiện tại</string>
    <string name="thoi_gian_ket_thuc_khong_the_nho_hon_thoi_gian_bat_dau">Thời gian kết thúc không thể nhỏ hơn thời gian bắt đầu</string>
    <string name="dia_chi_khong_duoc_de_trong">Địa chỉ không được để trống</string>
    <string name="ngay_bat_dau_khong_duoc_de_trong">Ngày bắt đầu không được để trống</string>
    <string name="ngay_ket_thuc_khong_duoc_de_trong">Ngày kết thúc không được để trống</string>
    <string name="vui_long_cap_quyen_su_dung_vi_tri_de_ung_dung_tim_duoc_vi_tri_cua_ban">Vui lòng cấp quyền sử dụng vị trí để ứng dụng tìm được vị trí của bạn</string>
    <string name="vui_long_bat_gpa_de_ung_dung_tim_duoc_vi_tri_cua_ban">Vui lòng bật GPS để ứng dụng tìm được vị trí của bạn</string>
    <string name="thiet_lap">Thiết lập</string>
    <string name="quay_video">Quay video</string>
    <string name="chup_anh">Chụp ảnh</string>
    <string name="cap_nhat_thong_tin">Cập nhật thông tin</string>
    <string name="doi_anh_dai_dien">Đổi ảnh đại diện</string>
    <string name="doi_anh_bia">Đổi ảnh bìa</string>
    <string name="dong">Đóng</string>
    <string name="chon_anh">Chọn ảnh</string>
    <string name="xong">Xong</string>
    <string name="trang_thai_don_hang">Trạng thái đơn hàng</string>
    <string name="ly_do_huy">Lý do hủy</string>
    <string name="tim_duoc_san_pham_voi_gia_tot_hon">Tìm được sản phẩm khác với giá tốt hơn</string>
    <string name="dat_nham_san_pham">Đặt nhầm sản phẩm</string>
    <string name="khong_muon_mua_nua">Không muốn mua nữa</string>
    <string name="phi_van_chuyen_cao">Phí vận chuyển cao</string>
    <string name="ly_do_khac">Lý do khác</string>
    <string name="hoan_tat">Hoàn tất</string>
    <string name="thong_tin_san_pham">Thông tin sản phẩm</string>
    <string name="ban_co_thac_mac_gi_ve_san_pham_khong">Bạn có thắc mắc gì về sản phẩm này không?</string>
    <string name="dat_cau_hoi">Đặt câu hỏi</string>
    <string name="ma_so_thue">Mã số thuế: </string>
    <string name="them_mo_ta_san_pham">Thêm mô tả sản phẩm</string>
    <string name="thong_tin_doanh_nghiep">Thông tin doanh nghiệp</string>
    <string name="ten_doanh_nghiep">Tên doanh nghiệp</string>
    <string name="san_pham_nay_hien_chua_co_cau_hoi_nao_hay_dat_n_cau_hoi_de_cung_thao_luan_o_day_nhe">Sản phẩm này hiện chưa có câu hỏi nào. Hãy đặt\ncâu hỏi để cùng thảo luận ở đây nhé!</string>
    <string name="dong_gop_thong_tin">Đóng góp thông tin</string>
    <string name="chon_danh_muc">Chọn danh mục</string>
    <string name="dia_chi_doanh_nghiep">Địa chỉ doanh nghiệp</string>
    <string name="nhap_ten_san_pham_bat_buoc">Nhập tên sản phẩm (bắt buộc)</string>
    <string name="nhap_gia_san_pham">Nhập giá sản phẩm</string>
</resources>