<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vg_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="vn.icheck.android.activities.product.contribute.ContributeProductActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:visibility="visible"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_50"
            android:adjustViewBounds="true"
            android:background="@null"
            android:padding="@dimen/size_14"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_back_blue_24px" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/size_50"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dong_gop_thong_tin"
            android:textAlignment="center"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/font_18" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@color/gray" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/size_12"
        android:layout_marginEnd="@dimen/size_12"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_12"
                android:layout_marginBottom="@dimen/size_12"
                android:text="@string/thong_tin_san_pham"
                android:textColor="#3C5A99"
                android:textSize="@dimen/font_18" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_product_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="(*)Ảnh sản phẩm là bắt buộc. Vui lòng chụp đúng theo mô tả."
                android:textColor="#828282"
                android:textSize="@dimen/font_12" />

            <EditText
                android:id="@+id/edt_no_edit_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:background="@drawable/bg_edt_no_edit"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/size_12"
                android:paddingTop="@dimen/size_8"
                android:paddingEnd="@dimen/size_12"
                android:paddingBottom="@dimen/size_8"
                android:textColor="#828282"
                android:textSize="@dimen/font_14"
                tools:text="8931234567890" />

            <EditText
                android:id="@+id/edt_product_name"
                style="@style/contribute_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                android:hint="@string/nhap_ten_san_pham_bat_buoc"
                android:inputType="textPersonName"
                android:textColor="@color/darkGray1" />

            <EditText
                android:id="@+id/edt_product_price"
                style="@style/contribute_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:textColor="@color/darkGray1"
                android:hint="@string/nhap_gia_san_pham"
                android:inputType="number" />

            <TextView
                android:id="@+id/spn_dm"
                style="@style/contribute_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_12"
                android:drawableEnd="@drawable/ic_down_blue_18px"
                android:text="@string/chon_danh_muc"
                android:textColor="#434343" />

            <LinearLayout
                android:id="@+id/btn_add_description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_60"
                android:orientation="vertical"
                android:visibility="gone"
                android:gravity="center"
                tools:visibility="visible"
                android:background="@drawable/bg_border_dotted_10_gray">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:text="@string/them_mo_ta_san_pham"
                    android:drawableStart="@drawable/ic_add_gray_24px"
                    android:drawablePadding="@dimen/size_13"
                    android:textColor="@color/darkGray3" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_add_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/btn_search_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                app:srcCompat="@drawable/search_by_google" />

            <TextView
                android:id="@+id/tv_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:layout_marginBottom="@dimen/size_12"
                android:text="@string/thong_tin_doanh_nghiep"
                android:textColor="#3C5A99"
                android:textSize="@dimen/font_18" />

            <EditText
                android:id="@+id/edt_name_dn"
                style="@style/contribute_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/darkGray1"
                android:hint="@string/ten_doanh_nghiep"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edt_address_dn"
                style="@style/contribute_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/darkGray1"
                android:hint="@string/dia_chi_doanh_nghiep"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edt_phone_dn"
                style="@style/contribute_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:ems="10"
                android:textColor="@color/darkGray1"
                android:hint="@string/so_dien_thoai"
                android:inputType="number" />

            <EditText
                android:id="@+id/edt_email"
                style="@style/contribute_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/darkGray1"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edt_tax"
                style="@style/contribute_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:ems="10"
                android:textColor="@color/darkGray1"
                android:hint="@string/ma_so_thue"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_32"
                android:layout_marginEnd="@dimen/size_32"
                android:layout_marginBottom="@dimen/size_32"
                android:layout_marginTop="@dimen/size_12"
                android:background="@drawable/bg_gray_corner_20dp"
                android:text="@string/hoan_tat"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
