<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/size_10"
    android:paddingEnd="@dimen/size_10"
    android:paddingBottom="@dimen/size_12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_corners_8"
        android:orientation="vertical">

        <vn.icheck.android.ichecklibs.view.disable_text.TextDisable
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/chon_anh"
            android:visibility="gone"
            android:textSize="@dimen/font_14"
            android:textStyle="normal" />

        <View style="@style/Line_Gray.Horizontal" />

        <vn.icheck.android.ichecklibs.view.primary.TextBarlowMediumPrimary
            android:id="@id/txtCamera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:background="@drawable/btn_white_top_corners_10"
            android:gravity="center"
            android:text="@string/chup_anh"
            android:textSize="@dimen/font_18"
            android:textStyle="normal" />

        <View style="@style/Line_Gray.Horizontal" />

        <vn.icheck.android.ichecklibs.view.primary.TextBarlowMediumPrimary
            android:id="@id/txtDocument"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:background="@drawable/btn_white_bottom_corners_8"
            android:gravity="center"
            android:text="@string/quay_video"
            android:textSize="@dimen/font_18"
            android:textStyle="normal" />
    </LinearLayout>

    <vn.icheck.android.ichecklibs.view.primary.TextBarlowSemiBoldPrimary
        android:id="@id/txtCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_marginTop="@dimen/size_8"
        android:background="@drawable/btn_white_corners_8"
        android:gravity="center"
        android:text="@string/bo_qua"
        android:textSize="@dimen/font_18"
        android:textStyle="bold" />
</LinearLayout>