<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size_10"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_product_empty_qa" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barlow_semi_bold"
        android:lineSpacingExtra="@dimen/font_6"
        android:text="@string/ban_co_thac_mac_gi_ve_san_pham_khong"
        android:textColor="#212121"
        android:textSize="@dimen/font_14" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:fontFamily="@font/barlow_medium"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/font_6"
        android:text="@string/san_pham_nay_hien_chua_co_cau_hoi_nao_hay_dat_n_cau_hoi_de_cung_thao_luan_o_day_nhe"
        android:textColor="#757575"
        android:textSize="@dimen/font_14" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnQueston"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_36"
        android:layout_marginStart="@dimen/size_12"
        android:layout_marginTop="@dimen/size_16"
        android:layout_marginEnd="@dimen/size_12"
        android:fontFamily="@font/barlow_semi_bold"
        android:layout_marginBottom="@dimen/size_10"
        android:background="@drawable/bg_corners_4_light_blue_no_solid"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/font_8"
        android:text="@string/dat_cau_hoi"
        android:textColor="#057dda"
        android:textSize="@dimen/font_16" />

</LinearLayout>